@@ -12,6 +12,8 @@
 	  open/save a file in the dialogs. It also removes some
 	  useless casts, and a no longer necessary action
 	  (do-popdown()).
+	* interface/x_trace.c: Make the trace cut off text in the
+	  instrument name column correctly in the Xft case.
 
 2012-06-12  Yair K. <cesium2@gmail.com>
 
